--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<label>Nama: Marsya Herdamas</label>
+<label>Alamat: Bekasi </label>
+<label>Usia: 28</label>
 <body>
     
 </body>
