--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <li>Nama : Muhammad Ilham Firmansyah</li>
+    <li>Alamat : Sidoarjo, Jawa Timur</li>
+    <li>Umur : 21 Tahun</li>
 </body>
 </html>
