add Rama's Personal Info

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 style="text-align: center;">Personal Info</h1>
+    <ul style="list-style-type:none;">
+        <li>Nama : Muhammad Ramadhani</li>
+        <li>Alamat : Amuntai</li>
+        <li>Usia : 25 tahun</li>
+    </ul>  
 </body>
 </html>
