--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <label>Nama: Marsya Herdamas</label>
-<label>Alamat: Bekasi </label>
+<label>Alamat: Bekasi, Jatiasih </label>
 <label>Usia: 28</label>
 <body>
     
