--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         <li>Alamat : Amuntai</li>
         <li>Usia : 25 tahun</li>
     </ul>  
-    <li>Nama : Muhammad Ilham Firmansyah</li>
-    <li>Alamat : Sidoarjo, Jawa Timur</li>
-    <li>Umur : 21 Tahun</li>
-    <label>Nama: Marsya Herdamas</label>
-    <label>Alamat: Planet Bekasi</label>
-    <label>Usia: 28</label>
+    <ul style="list-style-type:none;">
+         <li>Nama : Muhammad Ilham Firmansyah</li>
+        <li>Alamat : Sidoarjo, Jawa Timur</li>
+        <li>Umur : 21 Tahun</li>
+    </ul>
+    <ul style="list-style-type:none;">
+        <li>Nama: Marsya Herdamas</li>
+        <li>Alamat: Planet Bekasi</li>
+        <li>Usia: 28</li>
+    </ul>
 </body>
 </html>
