--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
      <title>Document</title> 
  </head> 
  <body> 
-      <h1>MIFTAKHUL KHOIR</h1>
-      <h1>Kab Kudus,Jawa Tengah</h1>
-      <h1>21</h1>
+      <h1>Nama: MIFTAKHUL KHOIR</h1>
+      <h1>Alamat: Kab Kudus,Jawa Tengah</h1>
+      <h1>Usia: 21</h1>
  </body> 
  </html>
