--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<label>Nama: Marsya Herdamas</label>
-<label>Alamat: Planet Bekasi</label>
-<label>Usia: 28</label>
 <body>
-    
+    <h1 style="text-align: center;">Personal Info</h1>
+    <ul style="list-style-type:none;">
+        <li>Nama : Muhammad Ramadhani</li>
+        <li>Alamat : Amuntai</li>
+        <li>Usia : 25 tahun</li>
+    </ul>    
 </body>
 </html>
